# advent-of-code-2023

day01/: part1.py  part2.py  pyproject.toml
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py  pyproject.toml
day09/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py  pyproject.toml
day12/: part1.py  part2.py  pyproject.toml
day13/: part1.py  part2.py  pyproject.toml
day14/: part1.py  part2.py
day15/: part1.py  part2.py
day16/: part1.py  part2.py
day17/: part1.py  part2.py  pyproject.toml
day18/: part1.py  part2.py  pyproject.toml
day19/: part1.py  part2.py
day20/: part1.py  part2.py  pyproject.toml
day21/: part1.py  part2.py  pyproject.toml
day22/: part1.py  part2.py  pyproject.toml
day23/: part1.py  part2.py  problem.dot  pyproject.toml
day24/: part1.py  part2.py  pyproject.toml
day25/: part1.py  pyproject.toml
template/: part1.py
